# Dataset-Converter

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
documentation/: logo.ai
frameworks/: dataset-convert.desktop.in  logo.icns  logo.psd
src/: CMakeLists.txt
src/dataset_converter/: CMakeLists.txt
src/dataset_converter/resources/: lab_background.psd  no-scenario-loaded.psd  resources.qrc  style.qss
src/dataset_converter/resources/icons/: README.md
src/dataset_converter/src/: MainWindow.cpp  MainWindow.h  main.cpp
src/dataset_converter/src/dialog/: AboutDialog.cpp  AboutDialog.h  ErrorDialog.cpp  ErrorDialog.h  LoadDatasetDialog.cpp  LoadDatasetDialog.h  LoadScenarioDialog.cpp  LoadScenarioDialog.h  SaveScenarioDialog.cpp  SaveScenarioDialog.h
src/dataset_converter/src/platform/: OSXHideTitleBar.h  OSXHideTitleBar.mm
src/dataset_converter/src/visualisation/: GraphicsViewClickHandler.cpp  GraphicsViewClickHandler.h  GraphicsViewZoomHandler.cpp  GraphicsViewZoomHandler.h  LaneletVisualisation.cpp  LaneletVisualisation.h  ScenarioVisualization.cpp  ScenarioVisualization.h
src/dataset_converter/src/visualisation/graphics_items/: ColorDefinition.h  ExtendedObjectItem.cpp  ExtendedObjectItem.h  LaneletItem.cpp  LaneletItem.h  NodeItem.cpp  NodeItem.h  WayItem.cpp  WayItem.h
src/dataset_converter/src/worker/: DatasetParser.cpp  DatasetParser.h  LaneletHandler.cpp  LaneletHandler.h  ScenarioHandler.cpp  ScenarioHandler.h
src/dataset_converter/ui/: aboutdialog.ui  errordialog.ui  loaddatasetdialog.ui  loadscenariodialog.ui  mainwindow.ui  savescenariodialog.ui
src/dataset_converter_common/: CMakeLists.txt
src/dataset_converter_common/include/dataset_converter_common/: DatasetParser.h  DatasetScenario.h
src/dataset_converter_common/include/dataset_converter_common/DUT/: DutParser.h  DutScenario.h
src/dataset_converter_common/include/dataset_converter_common/KoPer/: KoPerScenario.h
src/dataset_converter_common/include/dataset_converter_common/inD/: InDParser.h  InDScenario.h
src/dataset_converter_common/include/dataset_converter_common/rounD/: RounDParser.h  RounDScenario.h
src/dataset_converter_common/include/dataset_converter_lib/: DatasetParser.h
src/dataset_converter_common/include/dataset_converter_lib/DUT/: DutParser.h  DutScenario.h
src/dataset_converter_common/include/dataset_converter_lib/inD/: InDParser.h  InDScenario.h
src/dataset_converter_common/include/dataset_converter_lib/rounD/: RounDParser.h  RounDScenario.h
src/dataset_converter_common/src/: DatasetParser.cpp  DatasetScenario.cpp
src/dataset_converter_common/src/DUT/: DutParser.cpp  DutScenario.cpp
src/dataset_converter_common/src/KoPer/: KoPerParser.cpp  KoPerScenario.cpp
src/dataset_converter_common/src/inD/: InDParser.cpp  InDScenario.cpp
src/dataset_converter_common/src/roundD/: RounDParser.cpp  RounDScenario.cpp
src/dataset_converter_lib/: CMakeLists.txt
src/dataset_converter_lib/include/dataset_converter_lib/: DatasetScenario.h
src/dataset_converter_lib/include/dataset_converter_lib/KoPer/: KoPerParser.h  KoPerScenario.h
src/dataset_converter_lib/include/dataset_converter_lib/rounD/: RounDParser.h  RounDScenario.h
src/dataset_converter_lib/src/roundD/: RounDParser.cpp  RounDScenario.cpp
src/libs/: CMakeLists.txt
